devops/infra/vpc/vpc.tf
#vpc resource
resource "aws_vpc" "vpc" {
    cidr_block  = "${var.vpc_cidr}"
    enable_dns_hostnames = true
    enable_dns_support  = true
    tags = {
        Name    = "${var.environment}-vpc"
        Environment = "${var.environment}"
        "kubernetes.io/cluster/${var.environment}-cluster" = "shared"
        "karpenter.sh/discovery": "${var.environment}-cluster"
    }
}
